--- a/style.css
+++ b/style.css
@@ -71,15 +71,24 @@ ul li {
     position: relative;
 }
 
-ul li::before {
+ul li:before {
     content: '';
     position: absolute;
     height: 28px;
     width: 28px;
     border-radius: 50%;
-    background-image: url();
+    background-image: url('images/unchecked.png');
     background-size: cover;
     background-position: center;
     top: 12px;
     left: 8px;
+}
+
+ul li.checked{
+    color:#555;
+    text-decoration: line-through;
+}
+
+ul li.checked:before {
+    background-image: url('images/checked.png');
 }
