--- a/style.css
+++ b/style.css
@@ -71,13 +71,14 @@ ul li {
     position: relative;
 }
 
-ul li:before {
+ul li::before {
     content: '';
     position: absolute;
     height: 28px;
     width: 28px;
     border-radius: 50%;
-    background-image: url('images/unchecked.png');
+    /* some reason this is not showing and getting 404 message */
+    background-image: url(images/unchecked.png); 
     background-size: cover;
     background-position: center;
     top: 12px;
@@ -89,6 +90,25 @@ ul li.checked{
     text-decoration: line-through;
 }
 
-ul li.checked:before {
-    background-image: url('images/checked.png');
+/* for some reason it is not showing up on the page */
+ul li.checked::after {
+     background-image: url(images/checked.png);
+}
+
+ul li span{
+    position: absolute;
+    right: 0;
+    top: 5px;
+    width:40px;
+    height: 40px;
+    font-size:22px;
+    color: orangered;
+    line-height: 40px;
+    text-align: center;
+    border-radius: 50%;
+}
+
+
+ul li span:hover {
+    background: #edeef0;
 }
